<resources>

    <string name="app_name">Book Library</string>

    <!-- Common -->
    <string name="date_time_format">dd/MM/yyyy HH:mm</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="book_returned_message">Book returned!</string>
    <string name="action_return_book">Return</string>
    <string name="book_author_full_name_text">%1$s %2$s</string>

    <!-- Titles -->
    <string name="title_activity_login">@string/app_name</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_admin_lent_books_tracking">Lent Books</string>
    <string name="title_activity_books_catalog">Books Catalog</string>
    <string name="title_activity_lending_history">Lending History</string>
    <string name="title_activity_book_details">Book Details</string>

    <!-- Menu options -->
    <string name="menu_book_catalog">Book Catalog</string>
    <string name="menu_lending_history">Lending History</string>
    <string name="menu_add_book">Add Book</string>
    <string name="menu_lending_tracking">Lending Tracker</string>
    <string name="menu_logout">Logout</string>

    <string name="network_error">There is a problem with the connection</string>
    <string name="server_error">An unknown error has occurred</string>

    <!-- Login Activity -->
    <string name="tab_login">Sign In</string>
    <string name="tab_register">Register</string>
    <string name="welcome_message">Welcome %1$s %2$s!</string>
    <string name="invalid_credentials">Username or password is incorrect</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="first_name_empty_error">First name cannot be empty!</string>
    <string name="last_name_empty_error">Last name cannot be empty!</string>
    <string name="username_illegal_error">Username must be at least 4 characters!</string>
    <string name="password_illegal_error">Password must be at least 4 characters!</string>
    <string name="passwords_dont_match_error">Password and repeat password do not match!</string>

    <!-- Book Catalog Activity -->
    <string name="prompt_text_search">Enter text to search</string>
    <string name="action_search">Search</string>
    <string name="no_matching_books_found_message">No matching books found!</string>
    <string name="all_categories_spinner_item">All Categories</string>


    <!-- Add Book Activity -->
    <string name="prompt_book_isbn">Book ISBN</string>
    <string name="prompt_book_name">Book Name</string>
    <string name="prompt_author_first_name">Author First Name</string>
    <string name="prompt_author_last_name">Author Last Name</string>
    <string name="prompt_book_description">Book Description</string>
    <string name="prompt_book_category">Category:</string>
    <string name="action_add_book">Add Book</string>
    <string name="book_isbn_empty_error">Book ISBN cannot be empty!</string>
    <string name="book_name_empty_error">Book name cannot be empty!</string>
    <string name="book_author_first_name_empty_error">Author first name cannot be empty!</string>
    <string name="book_author_last_name_empty_error">Author last name cannot be empty!</string>
    <string name="book_category_empty_error">Book category cannot be empty!</string>
    <string name="book_added_message">Book added!</string>

    <!-- Lending History Activity -->
    <string name="book_lent_time_text">Lent: %1$s</string>
    <string name="book_returned_time_text">Returned: %1$s</string>
    <string name="no_lending_history_message">You have never lent any books!</string>

    <!-- Lent Books Activity -->
    <string name="book_lent_to_text">Lent to: %1$s %2$s</string>
    <string name="book_lent_at_time_text">Lent at: %1$s</string>
    <string name="no_lent_books_found_message">The are no lent books!</string>

    <!-- Book Details Activity -->
    <string name="book_ordered_message">Book ordered!</string>
    <string name="review_added_message">Review submitted!</string>
    <string name="prompt_review">Write a review..</string>
    <string name="action_add_review">></string>
    <string name="action_order">Order</string>
    <string name="action_order_already_ordered">Ordered: %1$s</string>
    <string name="action_order_unavailable">Unavailable</string>
    <string name="no_book_description_message">This book has no description</string>
    <string name="reviewer_name_text">%1$s %2$s</string>
    <string name="author_name_text">By: %1$s %2$s</string>
    <string name="category_text">Category: %1$s</string>

</resources>