<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_book_catalog"
        app:showAsAction="never|withText"
        android:title="@string/menu_book_catalog"/>

    <item
        android:id="@+id/menu_lending_history"
        app:showAsAction="never|withText"
        android:title="@string/menu_lending_history"/>

    <item
        android:id="@+id/menu_add_book"
        app:showAsAction="never|withText"
        android:visible="false"
        android:title="@string/menu_add_book"/>

    <item
        android:id="@+id/menu_lending_tracking"
        app:showAsAction="never|withText"
        android:visible="false"
        android:title="@string/menu_book_catalog"/>

    <item
        android:id="@+id/menu_logout"
        app:showAsAction="never|withText"
        android:title="@string/menu_logout"/>
</menu>