<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin_big"
        android:paddingTop="@dimen/activity_vertical_margin_big"
        android:paddingRight="@dimen/activity_horizontal_margin_big"
        android:paddingBottom="@dimen/activity_vertical_margin_big"
        tools:context=".ui.addBookActivity.AddBookActivity">

        <TextView
            android:id="@+id/book_category_prompt"
            style="@style/promptTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_book_category"
            app:layout_constraintBottom_toBottomOf="@+id/category_spinner"
            app:layout_constraintTop_toTopOf="@+id/category_spinner"
            app:layout_constraintStart_toStartOf="parent" />


        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            app:layout_constraintStart_toEndOf="@+id/book_category_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/spacing_normal"/>

        <EditText
            android:id="@+id/book_isbn"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_book_isbn"
            android:layout_marginTop="@dimen/spacing_normal"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_spinner"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/book_name"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_book_name"
            android:layout_marginTop="@dimen/spacing_normal"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_isbn"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/author_fname"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_author_first_name"
            android:layout_marginTop="@dimen/spacing_normal"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_name"
            android:autofillHints="name"/>


        <EditText
            android:id="@+id/author_lname"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_author_last_name"
            android:layout_marginTop="@dimen/spacing_normal"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_fname"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/book_description"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_book_description"
            android:layout_marginTop="@dimen/spacing_normal"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_lname"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/add_book"
            style="@style/actionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/spacing_big"
            android:text="@string/action_add_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_description" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="@dimen/loading_indicator_size"
            android:layout_height="@dimen/loading_indicator_size"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>