<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.bookDetailsActivity.BookDetailsActivity">

    <TextView
        android:id="@+id/book_name"
        style="@style/promptTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Book Title Very Very Long Name Indeed" />


    <TextView
        android:id="@+id/book_author"
        style="@style/promptTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@+id/book_name"
        tools:text="Written by: Tal Mantelmakher" />

    <TextView
        android:id="@+id/book_category"
        style="@style/promptTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@+id/book_author"
        tools:text="Category: Some Category" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/book_category" />

    <TextView
        android:id="@+id/book_description"
        style="@style/promptTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="start"
        android:maxLines="9"
        android:padding="@dimen/spacing_inside_small"
        android:scrollbars="vertical"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toTopOf="@+id/order_button"
        tools:text="This book tells the story of a man who lived a life without fear of dying. This book tells the story of a man who lived a life without fear of dying. This book tells the story of a man who lived a life without fear of dying. This book tells the story of a man who lived a life without fear of dying. " />

    <Button
        android:id="@+id/order_button"
        style="@style/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/action_order"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toStartOf="@+id/return_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_description" />


    <Button
        android:id="@+id/return_button"
        style="@style/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/action_return_book"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/order_button"
        app:layout_constraintTop_toBottomOf="@+id/book_description" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/order_button"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/books_reviews_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="200dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_2"
        app:layout_constraintBottom_toTopOf="@+id/review_edit_text" />

    <Button
        android:id="@+id/add_review_button"
        style="@style/actionButtonStyle"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/action_add_review"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toBottomOf="@+id/review_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/review_edit_text" />

    <EditText
        android:id="@+id/review_edit_text"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:autofillHints="name"
        android:hint="@string/prompt_review"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_review_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/loading_indicator_size"
        android:layout_height="@dimen/loading_indicator_size"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>